tests/baselines/reference/duplicateObjectLiteralProperty.errors.txt
==== tests/cases/compiler/duplicateObjectLiteralProperty.ts (9 errors) ====
    var x = {
        a: 1,
        b: true, // OK
        a: 56,   // Duplicate
        ~
!!! error TS2300: Duplicate identifier 'a'.
        \u0061: "ss", // Duplicate
        ~~~~~~
!!! error TS2300: Duplicate identifier '\u0061'.
        a: {
        ~
!!! error TS2300: Duplicate identifier 'a'.
            c: 1,
            "c": 56, // Duplicate
            ~~~
!!! error TS2300: Duplicate identifier '"c"'.
        }
    };
    
    
    var y = {
        get a() { return 0; },
            ~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
        set a(v: number) { },
            ~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
        get a() { return 0; }
            ~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
            ~
!!! error TS1118: An object literal cannot have multiple get/set accessors with the same name.
            ~
!!! error TS2300: Duplicate identifier 'a'.
    };
    